#14 1124 然後來讀取excel close #2

--- a/www/main.html
+++ b/www/main.html
@@ -29,7 +29,7 @@
             </ons-col>
             <ons-col>
                 <input type="number" class="search-input" id="isbn" name="isbn"
-                       value="{{isbn}}"
+                       value="{{mock_isbn}}"
                        placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}" />
                 <!--autofocus--> 
             </ons-col>
