#14 1124 來睡 close #2 close #12

--- a/www/name.html
+++ b/www/name.html
@@ -14,7 +14,7 @@
         請輸入您的姓名 
     </ons-row>
 
-    <form id="name_html_profile">
+    <form id="name_html_profile" ng-submit="name_submit()">
         <ons-row>
             <input type="text" value="{{ profile.name}}" name="name" />
         </ons-row>
