--- a/www/name.html
+++ b/www/name.html
@@ -7,7 +7,7 @@
     </ons-toolbar>
 
     <ons-row>
-        Voc4Fun ICON
+        [Voc4Fun ICON]
     </ons-row>
 
     <ons-row>
@@ -16,7 +16,7 @@
 
     <form id="name_html_profile" ng-submit="name_submit()">
         <ons-row>
-            <input type="text" value="{{ profile.name}}" name="name" />
+            <input type="text" value="{{ profile.name }}" name="name" />
         </ons-row>
 
         <ons-row>
