--- a/www/name.html
+++ b/www/name.html
@@ -1,27 +1,27 @@
 <ons-page id="name_html" ng-device-backbutton="exit_app()">
+    <form ng-submit="ctl_name.name_submit()">
+        <ons-toolbar>
 
-    <ons-toolbar>
+            <div class="center">{{ 'TITLE' | translate }}</div>
 
-        <div class="center">{{ 'TITLE' | translate }}</div>
+        </ons-toolbar>
 
-    </ons-toolbar>
-
-    <ons-row>
-        [Voc4Fun ICON]
-    </ons-row>
-
-    <ons-row>
-        請輸入您的姓名 
-    </ons-row>
-
-    <form id="name_html_profile" ng-submit="name_submit()">
         <ons-row>
-            <input type="text" value="{{ profile.name }}" name="name" />
+            [Voc4Fun ICON]
         </ons-row>
 
         <ons-row>
-            <ons-button>{{ "ONS_OK" | translate }}</ons-button>
+            請輸入您的姓名 
         </ons-row>
+
+        <ons-row>
+            <input type="text" value="{{ profile.name}}" name="name" />
+        </ons-row>
+
+        <div class="bottom-bar" style="text-align: center">
+            <div class="bottom-bar__line-height" onclick="$(this).parents('form').submit();">
+                {{ "ONS_OK" | translate }}
+            </div>
+        </div>
     </form>
-
 </ons-page>
