#16 #17 #38 #33 [1125] 再調整一下欄位 close #15

--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
 
 
     <ons-template id="main">
-        <ons-navigator var="app.navi" page="name.html"></ons-navigator> 
+        <ons-navigator var="app.navi"></ons-navigator> 
     </ons-template>
 
 
