#40 [1125] 用db儲存現況 #40 db_status.js #33 controller_target.js

--- a/www/index.html
+++ b/www/index.html
@@ -76,6 +76,7 @@
     <script src="lib/pulipuli-utils/app_factory_jquery.js"></script>
     <script src="lib/pulipuli-utils/db_profile.js"></script>
     <script src="lib/pulipuli-utils/db_log.js"></script>
+    <script src="lib/pulipuli-utils/db_status.js"></script>
     
     <script src="lib/pulipuli-utils/cordova_social_share.js"></script>
     <script src="lib/pulipuli-utils/cordova_inappbrowser_submit.js"></script>
@@ -122,6 +123,7 @@
             _app_factory_db($scope);
             db_profile($scope);
             db_log($scope);
+            db_status($scope);
             
             _app_factory_book_cart($scope, $filter);
             controller_profile($scope);
