#33 [1125] 還要煩惱target_exists這個要怎麼處理 #33 controller_target.js close #40 db_status.js close #17 close #16

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,8 @@
         <link rel="stylesheet" href="css/ons-view.css" />
         <link rel="stylesheet" href="css/ons.css" />
         
+        <link rel="stylesheet" href="css/controller_target.css" />
+        
         <title>{{ 'TITLE' | translate }}</title>
 
     </head>
