--- a/www/target_init.html
+++ b/www/target_init.html
@@ -1,4 +1,4 @@
-<ons-page id="target_set_html" class="target-page" ng-device-backbutton="$($event.target).find('.button-ok').click()">
+<ons-page id="target_init_html" class="target-page" ng-device-backbutton="$($event.target).find('.button-ok').click()">
     <form ng-submit="ctl_target.set_target($event);ctl_activity.enter_from_target();">
         <ons-toolbar>
             <div class="center">{{ ctl_target.get_set_title()}}</div>
