--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -17,15 +17,20 @@
     </ons-toolbar>
 
     <div class="flashcard" style="margin: 0 1rem; border: 1px solid #DDD; border-radius: 4px;">
-        <ons-row class="q" style="padding:1rem; text-align: center;display: block;background-color: white;">
+        <ons-row class="q" ng-click="ctl_activity.speak(learn_flashcard.q)"
+                 style="padding:1rem; text-align: center;display: block;background-color: white; cursor: pointer">
+            <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
             {{ learn_flashcard.q}}
         </ons-row>
-        <ons-row class="a" style="border-top: 1px solid #DDD; background-color: #EEE;padding: 1rem;text-align: center;display: block;">
+        <ons-row class="a" ng-click="ctl_activity.speak(learn_flashcard.a)"
+                 style="border-top: 1px solid #DDD; background-color: #EEE;padding: 1rem;text-align: center;display: block;cursor: pointer" >
+            <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
             {{ learn_flashcard.a}}
         </ons-row>
     </div>
 
-    <div class="note" style=" margin:1rem;   padding: 1rem;    border-radius: 4px;border: 1px solid #ddd;
+    <div class="note" ng-click="ctl_note.enter(learn_flashcard.q)"
+         style=" margin:1rem;   padding: 1rem;  border-radius: 4px;border: 1px solid #ddd; cursor: pointer;
          background-color: #f9f9f9;max-height: 10rem; overflow-y: auto;">
         <div style="clear: both;">
             <i class="ion-compose" style="float:left;font-size: 2rem;margin-right: 0.5rem;"></i>
@@ -39,9 +44,9 @@
     </div>
 
     <ons-tabbar>
-        <ons-tab label="上一個單字" icon="ion-arrow-left-b"></ons-tab>
+        <ons-tab label="上一個單字" icon="ion-arrow-up-b"></ons-tab>
         <ons-tab label="進入測驗" icon="ion-ios-compose"></ons-tab>
-        <ons-tab label="下一個單字" icon="ion-arrow-right-b" active="true"></ons-tab>
+        <ons-tab label="下一個單字" icon="ion-arrow-down-b" active="true"></ons-tab>
     </ons-tabbar>
-    
+
 </ons-page>
