--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -17,29 +17,31 @@
     </ons-toolbar>
 
     <div class="flashcard" style="margin: 0 1rem; border: 1px solid #DDD; border-radius: 4px;">
-        <ons-row class="q" ng-click="ctl_activity.speak(learn_flashcard.q)"
+        <ons-row class="q" ng-click="ctl_activity.speak(ctl_learn_flashcard.var.learn_flashcard.q)"
                  style="padding:1rem; text-align: center;display: block;background-color: white; cursor: pointer">
+            <i class="ion-radio-waves hide" style="float:left;font-size: 1.5rem;margin-right: 0.5rem;color:#999;visibility: hidden;"></i>
+            {{ ctl_learn_flashcard.var.learn_flashcard.q}}
             <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
-            {{ learn_flashcard.q}}
         </ons-row>
-        <ons-row class="a" ng-click="ctl_activity.speak(learn_flashcard.a)"
+        <ons-row class="a" ng-click="ctl_activity.speak(ctl_learn_flashcard.var.learn_flashcard.a)"
                  style="border-top: 1px solid #DDD; background-color: #EEE;padding: 1rem;text-align: center;display: block;cursor: pointer" >
+            <i class="ion-radio-waves hide" style="float:left;font-size: 1.5rem;margin-right: 0.5rem;color:#999;visibility: hidden;"></i>
+            {{ ctl_learn_flashcard.var.learn_flashcard.a}}
             <i class="ion-radio-waves" style="float:right;font-size: 1.5rem;margin-right: 0.5rem;color:#999"></i>
-            {{ learn_flashcard.a}}
         </ons-row>
     </div>
 
-    <div class="note" ng-click="ctl_note.enter(learn_flashcard.q)"
+    <div class="note" ng-click="ctl_note.enter(ctl_learn_flashcard.var.learn_flashcard.q)"
          style=" margin:1rem;   padding: 1rem;  border-radius: 4px;border: 1px solid #ddd; cursor: pointer;
          background-color: #f9f9f9;max-height: 10rem; overflow-y: auto;">
         <div style="clear: both;">
             <i class="ion-compose" style="float:left;font-size: 2rem;margin-right: 0.5rem;"></i>
-            {{ learn_flashcard.note}}
+            {{ ctl_learn_flashcard.var.learn_flashcard.note}}
         </div>
 
         <span class="notification" style="float: right;margin-top: 0.5rem;">
             其他人的筆記:
-            {{ learn_flashcard.other_note_count}}
+            {{ ctl_learn_flashcard.var.learn_flashcard.other_note_count}}
         </span>
     </div>
 
