--- a/www/test_select.html
+++ b/www/test_select.html
@@ -13,7 +13,7 @@
         <div class="center">測驗</div>
         
         <div class="right" style="line-height: 44px;">
-            {{ target_data.learn_flashcard.done}} / {{ target_data.learn_flashcard.target}}
+            {{ ctl_target.status.test_select.done}} / {{ ctl_target.status.test_select.target}}
         </div>
     </ons-toolbar>
     
