--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -11,7 +11,7 @@
         <div class="center">單字學習</div>
 
         <div class="right" style="line-height: 44px;">
-            {{ target_data.learn_flashcard.done}} / {{ target_data.learn_flashcard.target}}
+            {{ ctl_target.status.learn_flashcard.done}} / {{ ctl_target.status.learn_flashcard.target}}
         </div>
 
     </ons-toolbar>
