#34 [1126] 嗯……讀取要怎麼做 #34 controller_test_select.js

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="css/ons.css" />
         
         <link rel="stylesheet" href="css/controller_target.css" />
+        <link rel="stylesheet" href="css/controller_test_select.css" />
         
         <title>{{ 'TITLE' | translate }}</title>
 
