--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -1,4 +1,4 @@
-<ons-page id="learn_flashcard_transition_html" ng-device-backbutton="app.menu.open()">
+<ons-page id="learn_flashcard_transition_html">
     <ons-toolbar>
         <div class="left">
             <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
