#34 [1126] 要開始讀取了嗎 #34 controller_test_select.js

--- a/www/test_select.html
+++ b/www/test_select.html
@@ -60,7 +60,8 @@
         </div>
     </div>
     
-    <span>{{ _test_select }}</span>
+    <div>{{ _test_select }}</div>
+    <div>{{ ctl_test_select.status }}</div>
 
     <ons-tabbar ng-show="ctl_test_select.is_answered()">
         <ons-tab label="回到單字學習" icon="ion-ios-browsers-outline" 
