#55 1128 換一個方案 close #53

--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,7 @@
 <script src="lib/pulipuli-utils/cordova_utils.js"></script>
 <script src="lib/pulipuli-utils/cordova_social_share.js"></script>
 <script src="lib/pulipuli-utils/cordova_inappbrowser_submit.js"></script>
+<script src="lib/pulipuli-utils/cordova_text_to_speech.js"></script>
 
 <script src="js/app_factory_db.js"></script>
 <script src="js/controller_flashcard.js"></script>
@@ -96,9 +97,19 @@
 <script src="js/controller_activity.js"></script>
 <script src="js/controller_learn_flashcard.js"></script>
 <script src="js/controller_note.js"></script>
+
+<script src="lib/google-tts/google-tts.min.js"></script>
+<script src="lib/google-tts/soundmanager2.js"></script>
 <script src="js/controller_test_select.js"></script>
 
 <script src="js/app_ready.js"></script>
+
+
+<!-- cordova -->
+<script src="cordova.js"></script>
+<script type="text/javascript" charset="utf-8" src="tts.js"></script>
+
+<!-- ========================================= -->
 
 <script type="text/javascript">
 var app = ons.bootstrap('app', ['onsen', 'pascalprecht.translate']);
@@ -123,6 +134,7 @@ var _app_controller = function ($scope, $filter) {
     cordova_utils($scope);
     cordova_social_share($scope, $filter);
     cordova_inappbrowser_submit($scope);
+    cordova_text_to_speech($scope);
     _app_factory_ons_view($scope);
     _app_factory_ons_utils($scope, $filter);
     _app_factory_jquery_utils($scope);
@@ -154,9 +166,6 @@ app.controller('app_controller',
             '$filter',
             _app_controller]);
 </script>
-
-<!-- cordova -->
-<script src="cordova.js"></script>
 
 <!-- ------------------------------- -->
 
