--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -12,7 +12,8 @@
 
         <div class="right" style="line-height: 44px;" >
             <span ng-init="_target_data = ctl_target.status.learn_flashcard" 
-                 ng-class="{'target-completed': (_target_data.done > _target_data.target-1)}">
+                 ng-class="{'target-completed': (_target_data.done > _target_data.target-1)}"
+                 ng-click="ctl_target.enter_for_view()">
                 {{ _target_data.done}} / {{ _target_data.target}}
             </span>
             
