--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -1,7 +1,7 @@
 <ons-page id="learn_flashcard_html" class="learn-flashcard-page" ng-device-backbutton="main_back()" ng-init="_learn_flashcard = ctl_learn_flashcard.var.learn_flashcard">
     <ons-toolbar>
         <div class="left">
-            <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
+            <ons-toolbar-button ng-click="menu_click($event)" class="menu-open">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
                     <i class="ion-navicon"></i>
                 </span>
