--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 
     <script src="lib/onsen/js/onsenui.min.js"></script>
     <script src="lib/zepto/zepto.min.js"></script>
+    <script src="lib/zepto/jquery-autogrow.min.js"></script>
 
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css" />
