1128 真的有點無聊，來去跑步 close #19

--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -49,9 +49,9 @@
         <div style="clear: both;">
             <i class="ion-compose" style="float:left;font-size: 2rem;margin-right: 0.5rem;"></i>
             
-            <span class="your-note" ng-show="(_learn_flashcard.note !== null)"
-                  style="white-space: pre;">{{ _learn_flashcard.note}}</span>
-            <span class="note-empty" style="color: gray;" ng-show="(_learn_flashcard.note === null)">
+            <span class="your-note" ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null)"
+                  style="white-space: pre;">{{ ctl_learn_flashcard.var.learn_flashcard.note}}</span>
+            <span class="note-empty" style="color: gray;" ng-show="(ctl_learn_flashcard.var.learn_flashcard.note === null)">
                 您還沒有撰寫筆記
             </span>
 
